--- a/src/app/pages/view-personalbests/personal-bests-chart/personal-bests-chart.component.html
+++ b/src/app/pages/view-personalbests/personal-bests-chart/personal-bests-chart.component.html
@@ -38,7 +38,8 @@
       </ion-radio-group>
 
 
-      <ion-button (click)="showChart()" expand="full">Show chart</ion-button>
+      <ion-button (click)="showChart()" expand="full" class="rounded-button"
+      >Show chart</ion-button>
 
   </ion-card>
 
@@ -46,7 +47,7 @@
   <ion-label>Progress Chart</ion-label>
 </ion-item-divider>
 
-<ion-card class = "chart-card" style="background-color: rgba(215,200,200,0.76)">
+<ion-card class = "chart-card" style="background-color:#A8DADC; color: black; weight:10">
   <canvas baseChart
           *ngIf="chartData.length > 0"
           [datasets]="chartData"
@@ -60,16 +61,16 @@
   <ion-label>Latest {{showExercise}} bests</ion-label>
 </ion-item-divider>
 
-            <ion-card >
+            <ion-card class = "chart-card" style="background-color:#A8DADC; color: black; weight:10">
               <ion-card-content class="max-height-card-content">
-                <ion-list>
+                <ion-list >
                   <ion-item-sliding *ngFor="let personalBest of personalBestsData">
-                    <ion-item>
+                    <ion-item clsss = "chart-card" style="background-color:#A8DADC; color: black; weight:10">
                       <ion-label>
                         <h2>{{ personalBest.location }}</h2>
                         <p>{{ personalBest.date }}</p>
                       </ion-label>
-                      <ion-note slot="end" color="primary">
+                      <ion-note slot="end" color="black">
                         <p>Reps: {{ personalBest.reps }}</p>
                         <p>Weight: {{ personalBest.weight }}</p>
                       </ion-note>
