--- a/src/app/pages/otheruser/schedules/schedules.component.html
+++ b/src/app/pages/otheruser/schedules/schedules.component.html
@@ -3,7 +3,7 @@
     <ion-toolbar>
       <ion-item>
         <backbutton class="larger-back-button"></backbutton>
-        <ion-title>Workout Schedules</ion-title>
+        <ion-title>Workout Schedule</ion-title>
       </ion-item>
     </ion-toolbar>
   </ion-header>
