--- a/src/app/pages/workout-scheduling/workout-scheduling.page.html
+++ b/src/app/pages/workout-scheduling/workout-scheduling.page.html
@@ -3,7 +3,7 @@
   <ion-toolbar>
     <ion-item lines="none">
       <backbutton class="larger-back-button"></backbutton>
-      <ion-title>Schedules</ion-title>
+      <ion-title>Workout Schedule</ion-title>
     </ion-item>
   </ion-toolbar>
 </ion-header>
