--- a/src/app/pages/dashboard/dashboard.page.scss
+++ b/src/app/pages/dashboard/dashboard.page.scss
@@ -7,83 +7,29 @@
     height: 100%;
 }
 
-ion-content {
-    --background: url('/assets/Asset 2.png') no-repeat center/cover fixed; // #1D3557;
-}
-
-ion-card {
-    --background: #457B9D;
-    border-radius: 25px; /* Adjust the value as per your preference */
-    overflow: hidden;
-    opacity: 0.9;
-    height: 100%;
-    
-    ion-card-title {
-        text-align: center;
-        font-weight: bold;
-        font-style: italic;
-        color: #457B9D;
-        text-shadow: #E63946 2px 2px;  //#a9cfe0
-        background-color: #D9D9D9;
+.slider-container {
+    margin-bottom: 20px;
+    .slider-header {
+        padding: 10px;
     }
-
-    ion-text {
-        font-weight: bold;
-        font-style: italic;
-        color: #E63946;
-        text-shadow: #457B9D 2px 2px;
-        text-align: center;
-    }
-
-    ion-skeleton-text {
+    .dashboard-card {
+        margin: 0px;
         width: 100%;
-        height: 100%;
+        border-radius: 10px;
+        border-bottom-left-radius: 0px;
+        border-bottom-right-radius: 0px;
+       .discover-card {
+        text-align: center;
+        margin: 0px;
+       }
+    }
+
+    .grid-cards {
+        text-align: center;
+        margin: 0px;
     }
 }
 
-ion-col {
-    height: 21vh;
+ion-item {
+    --background: transparent;
 }
-
-.inline-container{
-    height: 100%;
-}
-
-.inline-container ion-card{
-    height: 43%;
-}
-
-.slide {
-    border-radius: 10px;
-    font-weight: bold;
-    font-style: italic;
-    color: black;
-    text-shadow: white 2px 2px;
-    text-align: center;
-    font-size: 20px;
-}
-
-ion-content {
-    --background: #f5f5f5;
-  }
-  
-  .slide-content {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-    text-align: center;
-  }
-  
-  h2 {
-    font-size: 24px;
-    font-weight: bold;
-    margin-bottom: 10px;
-  }
-  
-  p {
-    font-size: 18px;
-    color: #555;
-  }
-  
