--- a/src/app/pages/leaderboard/leaderboard.page.html
+++ b/src/app/pages/leaderboard/leaderboard.page.html
@@ -6,7 +6,7 @@
         <ion-segment-button value="friends">Friends</ion-segment-button>
       </ion-segment>
 
-      <ng-container *ngIf="users.length > 0; else noProfile">
+      <ng-container *ngIf="users.length > 0; else loaderContent">
         <div [hidden]="selectedSegment!=='everyone'">
           <leaderboard-user *ngFor="let user of users; let i=index"
             [user]="user"
@@ -25,30 +25,10 @@
           </leaderboard-user>
         </div>
       </ng-container>
-
-      <ng-template #noProfile>
-        <div *ngIf="isLoading">
-          <ion-card *ngFor="let i of [1,2,3,4,5,6,7]">
-            <ion-item lines="none">
-              <ion-avatar>
-                <ion-skeleton-text animated style="width: 40px; height: 40px; border-radius: 50%;"></ion-skeleton-text>
-              </ion-avatar>
-              <ion-text class="user-name">
-                <ion-skeleton-text animated style="width: 100px; height: 16px; margin-left: 10px;"></ion-skeleton-text>
-              </ion-text>
-              <ion-item slot="end" lines="none">
-                <ion-skeleton-text animated style="width: 20px; height: 16px;"></ion-skeleton-text>
-              </ion-item>
-            </ion-item>
-          
-            <div class="stats">
-              <ion-item lines="none" class="stats">
-                <!-- <ion-icon name="star-outline" slot="start"></ion-icon> -->
-                <ion-skeleton-text animated style="width: 70px; height: 16px; margin-left: 5px;"></ion-skeleton-text>
-              </ion-item>
-            </div>
-          </ion-card>  
-          </div>
+      <ng-template #loaderContent>
+        <div *ngIf="isLoading" class="loader-wrapper">
+          <ion-spinner></ion-spinner>
+        </div>
       </ng-template>
     </div>
   </ion-content>
