--- a/src/app/pages/leaderboard/leaderboard.page.scss
+++ b/src/app/pages/leaderboard/leaderboard.page.scss
@@ -6,6 +6,6 @@
     padding-top: 50px;
 }
 
-ion-content {
-    --background: url('/assets/Asset 2.png') no-repeat center/contain fixed;
+.loader-wrapper {
+    height: 80vh;
 }
