--- a/src/app/pages/fitnessgoals/goalcard/goalcard.component.html
+++ b/src/app/pages/fitnessgoals/goalcard/goalcard.component.html
@@ -28,7 +28,7 @@
                 <ion-row>
                     <ion-col>
                             <ion-label>{{(goal.progress!)}} % Done</ion-label>
-                            <ion-progress-bar value = "{{goal.progress! / 100}}" ></ion-progress-bar>
+                            <ion-progress-bar style = "height: 15px; border-radius: 10px" value = "{{goal.progress! / 100}}" ></ion-progress-bar>
                     </ion-col>
                 </ion-row>
                 <ion-row>
