--- a/src/app/pages/setprofile/setProfileC/setProfileC.component.scss
+++ b/src/app/pages/setprofile/setProfileC/setProfileC.component.scss
@@ -106,7 +106,7 @@
     transition: all 0.15s ease-in-out;
     z-index: 0;
     background: #000000 url('https://image.flaticon.com/icons/svg/61/61456.svg');
-    background: 1.4rem auto;
+    background: 1.4rem;
     width: 1px;
     height:1px;
     border-radius: 100%;
