--- a/src/app/pages/healthdata/healthdata.page.html
+++ b/src/app/pages/healthdata/healthdata.page.html
@@ -8,32 +8,47 @@
 </ion-header>
 
 <ion-content>
-  <ion-spinner *ngIf="isLoading"></ion-spinner>
+  <div class="spinner-container" *ngIf="isLoading">
+    <ion-spinner></ion-spinner>
+  </div>
+
+  <div class="icon-container">
+    <ion-icon name="heart" class="health-icon"></ion-icon>
+  </div>
+  <ion-text class="subtext">Enter all your health data here for catered results</ion-text>
 
   <form [formGroup]="healthDataForm" *ngIf="!isLoading" (ngSubmit)="saveHealthData()">
-    <ion-list>
-      <ion-item>
-        <ion-label>Height</ion-label>
-        <ion-input formControlName="height" type="text"></ion-input>
+    <ion-list class="centered">
+      <ion-item class="full-width">
+        <div class="input-field">
+          <ion-label>Height</ion-label>
+          <ion-input formControlName="height" type="text"></ion-input>
+        </div>
       </ion-item>
 
-      <ion-item>
-        <ion-label>Weight</ion-label>
-        <ion-input formControlName="weight" type="text"></ion-input>
+      <ion-item class="full-width">
+        <div class="input-field">
+          <ion-label>Weight</ion-label>
+          <ion-input formControlName="weight" type="text"></ion-input>
+        </div>
       </ion-item>
 
-      <ion-item>
-        <ion-label>Diet</ion-label>
-        <ion-input formControlName="diet" type="text"></ion-input>
+      <ion-item class="full-width">
+        <div class="input-field">
+          <ion-label>Diet</ion-label>
+          <ion-input formControlName="diet" type="text"></ion-input>
+        </div>
       </ion-item>
 
-      <ion-item>
-        <ion-label>Medical Conditions</ion-label>
-        <ion-input formControlName="medicalConditions" type="text"></ion-input>
+      <ion-item class="full-width">
+        <div class="input-field">
+          <ion-label>Medical Conditions</ion-label>
+          <ion-input formControlName="medicalConditions" type="text"></ion-input>
+        </div>
       </ion-item>
       
       <ion-item>
-        <ion-button expand="full" type="submit" [disabled]="!healthDataForm.valid">Submit</ion-button>
+        <ion-button class="submit" expand="full" type="submit" [disabled]="!healthDataForm.valid">Submit</ion-button>
       </ion-item>
     </ion-list>
   </form>
