--- a/src/app/pages/leaderboard/user/user.component.scss
+++ b/src/app/pages/leaderboard/user/user.component.scss
@@ -1,6 +1,7 @@
 .user {
-    margin: 10px;
+    margin: 8px;
     background-color: #A8DADC;
+    border-radius: 2px;
     .user-name {
         font-weight: bolder;
     }
