--- a/src/app/pages/messages/chatroom/chatroom.component.html
+++ b/src/app/pages/messages/chatroom/chatroom.component.html
@@ -37,13 +37,13 @@
   </div>
 </ion-content>
 
-<ion-footer>
+<ion-footer class="input-field-footer">
   <ion-item lines="none" class="message-input-field">
     <div class="input-field-wrapper">
       <ion-textarea placeholder="Type a message" [(ngModel)]="message.text"></ion-textarea>
     </div>
     <ion-fab horizontal="end" *ngIf="isText()">
-      <ion-fab-button>
+      <ion-fab-button class="message-send-fab-button">
         <ion-icon name="send" (click)="sendMessage()" class="message-send-icon"></ion-icon>
       </ion-fab-button>
     </ion-fab>
