small UI improvements

--- a/src/app/pages/dashboard/dashboard.page.html
+++ b/src/app/pages/dashboard/dashboard.page.html
@@ -81,7 +81,7 @@
               <ion-card class="grid-cards" routerLink="/badges">
                 <ion-card-content>
                   <ion-card-title>
-                    <ion-icon name="trophy"></ion-icon>
+                    <ion-icon name="medal"></ion-icon>
                   </ion-card-title>
                   Badges
                 </ion-card-content>
@@ -117,7 +117,7 @@
                   <ion-card-title>
                     <ion-icon name="calendar-outline"></ion-icon>
                   </ion-card-title>
-                  Schedules
+                  Schedule
                  </ion-card-content>
                 </ion-card>
               </ion-col>
@@ -127,7 +127,7 @@
                   <ion-card-title>
                     <ion-icon name="people-circle-outline"></ion-icon>
                   </ion-card-title>
-                 friends
+                 Friends
                  </ion-card-content>
                 </ion-card>
               </ion-col>
