--- a/src/app/pages/leaderboard/user/user.component.html
+++ b/src/app/pages/leaderboard/user/user.component.html
@@ -27,11 +27,11 @@
       </div>
       <div class="user-pr">
         <ion-text>Badges</ion-text><br>
-        <ion-text>{{"0"}}</ion-text>
+        <ion-text>{{badges}}</ion-text>
       </div>
       <div class="user-pr">
         <ion-text>Sessions</ion-text><br>
-        <ion-text>{{"0"}}</ion-text>
+        <ion-text>{{user.sessionsCompleted}}</ion-text>
       </div>
     </ion-item>
   </div>
