--- a/src/app/pages/search/gymsearch/gymsearch.component.html
+++ b/src/app/pages/search/gymsearch/gymsearch.component.html
@@ -48,17 +48,17 @@
         <img [src]="getPhotoUrl(gym?.photos?.[0]?.photo_reference)"  alt="Silhouette of mountains" class="gymImage"/>
       </ng-container>
       <ion-card-header style="display: flex; flex-direction: column;" class="gymDetails">
-        <ion-card-title class="whiteText" >{{ gym.name }}</ion-card-title>
+        <ion-card-title class="blackText" >{{ gym.name }}</ion-card-title>
         <br>
-        <ion-card-subtitle class="whiteText" >{{ gym.vicinity }}</ion-card-subtitle>
+        <ion-card-subtitle class="blackText" >{{ gym.vicinity }}</ion-card-subtitle>
         <br>
-        <ion-card-subtitle class="whiteText" >Rating: {{ gym.rating ? gym.rating : 'No Rating' }}</ion-card-subtitle>
+        <ion-card-subtitle class="blackText" >Rating: {{ gym.rating ? gym.rating : 'No Rating' }}</ion-card-subtitle>
       </ion-card-header>
       
         <ion-card-content class="friend-container">
           <ng-container *ngIf="gym.friendsLocationInfo && gym.friendsLocationInfo[0] && gym.friendsLocationInfo[0].length > 0; else noFriends">
             <ion-card-content *ngIf="showFriends[gym.place_id]; else dontShowFriends" class="friend-container">
-            <ion-card-header class="whiteText friendsHeader">
+            <ion-card-header class="blackText friendsHeader">
               Friends that have workout sessions scheduled here:
             </ion-card-header>
             <ul class="no-bullet">
@@ -80,12 +80,13 @@
           </ion-card-content>
           <ng-template #dontShowFriends>
             <ion-card-header class="whiteText friendsHeader showFriendsOrNot" (click)="toggleFriends(gym.place_id)">
-              {{showFriends[gym.place_id] ? 'Hide' : 'Show'}} Friends that are planning a workout here
+              {{showFriends[gym.place_id] ? 'Hide' : 'Show'}} Friends Workout Sessions
             </ion-card-header>
+            <ion-icon name="chevron-down-outline"></ion-icon>
           </ng-template>
           </ng-container>
           <ng-template #noFriends>
-            <ion-card-header class="whiteText friendsHeader">
+            <ion-card-header class="blackText friendsHeader">
               No friends have workout sessions scheduled here
             </ion-card-header>
           </ng-template>
