--- a/src/app/pages/search/gymsearch/gymsearch.component.scss
+++ b/src/app/pages/search/gymsearch/gymsearch.component.scss
@@ -13,32 +13,39 @@ ion-searchbar {
 
 
 .friend-container {
-    background: #E63946;
+    background: #A8DADC;
     border-radius: 15px;
-    margin-bottom: 5%;
-    padding-top: 5%;
+    padding-left: 0%;
+    padding-right: 0%;
+    margin-left: 0%;
+    margin-right: 0%;
+    margin-bottom: 0%;
+    // margin-bottom: 5%;
+    // padding-top: 5%;
 }
 
 .gymDetails {
-    background: #E63946;
+    background: #A8DADC;
     border-radius: 15px;
     color: white !important;
-    margin-bottom: 5%;
+    // margin-bottom: 5%;
 }
 
 .friend-photo {
     width: 40px;
     height: 40px;
     border-radius: 50%;
+    margin-left: 5%;
 }
 
 .friend-details {
-    margin-top: 5%;
+    // margin-top: 5%;
     background: #1D3557;
     border-radius: 15px;
     display: flex;
     align-items: center;
-    padding: 5%;
+    margin-bottom: 5%;
+    // padding: 5%;
 }
 
 .locationCard {
@@ -50,15 +57,19 @@ ion-searchbar {
 
 .gymImage {
     border-radius: 15px;
-    margin-bottom: 5%;
+    // margin-bottom: 5%;
 }
 
 .whiteText {
     color: white;
 }
 
+.blackText {
+    color: black;
+}
+
 .friendsHeader {
-    font-size: 28px;
+    font-size: 18px;
     font-weight: 700;
 }
 
@@ -74,6 +85,7 @@ ion-card-subtitle {
 .friendDisplayName {
     font-size: 22px;
     text-align: center;
+    padding: 5%;
 }
 
 .workoutName {
@@ -85,10 +97,12 @@ ion-card-subtitle {
 }
 
 .selectGym {
+    // padding-top: 0%;
+    margin-top: 0%;
     background: #1D3557;
     border-radius: 15px;
     color: white !important;
-    font-size: 28px;
+    font-size: 15px;
     font-weight: 700;
     text-align: center;
     box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.5);
@@ -104,7 +118,7 @@ ion-card-subtitle {
 
 .nextPage {
     border-radius: 50px;
-    --background: #A8DADC;
+    --background: white;
     box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.5);
     cursor: pointer;
     text-align: center;
@@ -122,4 +136,9 @@ ion-card-subtitle {
 .centralize{
     text-align: center;
     --padding-bottom: 20px;
+}
+
+.li{
+    list-style-type: none;
+    // margin-bottom: 5%;
 }
