--- a/src/app/pages/search/gymsearch/gymsearch.component.html
+++ b/src/app/pages/search/gymsearch/gymsearch.component.html
@@ -52,7 +52,7 @@
         <br>
         <ion-card-subtitle class="blackText" >{{ gym.vicinity }}</ion-card-subtitle>
         <br>
-        <ion-card-subtitle class="blackText" >Rating: {{ gym.rating ? gym.rating : 'No Rating' }}</ion-card-subtitle>
+        <ion-card-subtitle class="blackText" >Rating: {{ gym.rating ? gym.rating : 'No Rating' }}<ion-icon name="star" class="ratingIcon"></ion-icon></ion-card-subtitle>
       </ion-card-header>
       
         <ion-card-content class="friend-container">
