--- a/src/app/pages/leaderboard/user/user.component.html
+++ b/src/app/pages/leaderboard/user/user.component.html
@@ -8,10 +8,10 @@
         {{user.displayName}}
       </ion-text>
       <ion-text class="user-name" *ngIf="isCurrentUser">
-        {{user.displayName}}(You)
+        {{user.displayName}} (You)
       </ion-text>
 
-      <p>{{"~ " + user.bio}}</p>
+      <!-- <p>{{"~ " + user.bio}}</p> -->
     </ion-label>
   
     <ion-item slot="end" lines="none">
