--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -36,10 +36,15 @@
     </ion-buttons>
     <ion-title>
       <ion-chip class="clickable" routerLink="/userprofile">
-        {{DisplayName$}}
-        <ion-avatar>
-          <img src={{ProfilePicture$}}/>
-        </ion-avatar>
+        <ion-item>
+          <ion-avatar>
+            <img src={{ProfilePicture$}}/> 
+          </ion-avatar>
+        
+          <div class="name">
+            {{DisplayName$}}
+          </div>
+        </ion-item>
       </ion-chip>
     </ion-title>
     <ion-icon name="receipt-outline" 
@@ -80,7 +85,7 @@
     </ion-tab-button>
     <ion-tab-button tab="chatbot">
       <ion-icon name="logo-ionitron"></ion-icon>
-      chat bot
+      Chatbot
     </ion-tab-button>
   </ion-tab-bar>
 </ion-tabs>
