--- a/src/app/pages/splash/splash.page.html
+++ b/src/app/pages/splash/splash.page.html
@@ -10,7 +10,7 @@
     </ion-card-header>
   
     <ion-card-content>
-      Sweat Session is a fitness app that allows users to track their workouts and progress, and make some friends along the way.
+      SweatSession is a fitness app that allows users to track their workouts progress, and make some friends along the way.
     </ion-card-content>
     
 <!--    <ion-button size="large" class="getSButton"  fill="outline" routerLink="/login">-->
