--- a/src/app/pages/badges/badges.page.html
+++ b/src/app/pages/badges/badges.page.html
@@ -1,8 +1,10 @@
 <ion-header style="background-color: #E63946;">
-  <ion-item style="display: flex; align-items: center; background-color: #E63946;">
-    <backbutton class="larger-back-button" style="background-color: #E63946;"></backbutton>
-    <ion-title style="margin-left: 1rem; background-color: #E63946;">Badges</ion-title>
-  </ion-item>
+  <ion-toolbar>
+    <ion-item style="display: flex; align-items: center; background-color: #E63946;" lines="none">
+      <backbutton class="larger-back-button" ></backbutton>
+      <ion-title style="margin-left: 1rem; background-color: #E63946;">Badges</ion-title>
+    </ion-item>
+  </ion-toolbar>
 </ion-header>
 
 <ion-content class="badgesContainer">
