--- a/src/app/pages/workout-scheduling/add-schedule/add-schedule.component.html
+++ b/src/app/pages/workout-scheduling/add-schedule/add-schedule.component.html
@@ -32,7 +32,7 @@
             <div class="location-container">
               <ion-item class="location-item">   
                 <ion-label position="stacked">Location</ion-label>  
-                <ion-input type="text" [(ngModel)]="schedule.location" placeholder="Click on the location icon."></ion-input>      
+                <ion-input type="text" [(ngModel)]="schedule.location" placeholder="Click on the location icon"></ion-input>      
               </ion-item>
             
               <ion-icon name="location" slot="end" (click)="openLocationModal()" class="location-icon"></ion-icon>
